--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 -->
 <h2 class="secondH">Welcome to SEFM 2022</h2>
 <p>The 20th edition of the International Conference on Software Engineering and
- Formal Methods will <br>be held between 26 and 30 September 2022.</p>
+ Formal Methods will be held between 26 and 30 September 2022.</p>
 
 <p>The conference aims to bring together researchers and practitioners from academia,
  industry and government, to advance the state of the art in formal methods,
