--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <h2>20th International Conference on</h2>
     <h1 class="page-title">Software Engineering and Formal Methods</h1>
     <h3>26-30 September 2022</h3>
-    <h3>Organised by Institute of Computer Science of Humboldt University Berlin and School of Electronic and Information Engineering of Beijing Jiaotong University.
+    <h3>Jointly organised by Institute of Computer Science of Humboldt University Berlin (DE) and School of Electronic and Information Engineering of Beijing Jiaotong University (CN)
 </h3>
       <div class="page-content">
         <div id="secondary" class="widget-area sidey" role="complementary">
