--- a/cfp.html
+++ b/cfp.html
@@ -81,12 +81,14 @@
         <div id="secondary" class="widget-area sidey" role="complementary">
    </div>
 <h2>Overview and Scope</h2>
-<p>The 19th edition of the International Conference on Software Engineering and
-Formal Methods will be held <b>virtually</b> between <b>6 and 10 December 2021</b>. The conference
-aims to bring together researchers and practitioners from academia, industry and
-government, to advance the state of the art in formal methods, to facilitate their
- uptake in the software industry, and to encourage their integration within practical
-  software engineering methods and tools.
+<p>The 20th edition of the International Conference on <i>Software Engineering and Formal Methods</i> (SEFM'22) 
+	will be held Sept. 28 - 30, 2022, with workshops on Sept. 26 and 27 and a SEFM school Sept. 20-24. 
+	The conference aims to bring together researchers and practitioners from academia, industry and 
+	government, to advance the state of the art in formal methods, to facilitate their uptake in the 
+	software industry, and to encourage their integration within practical software engineering methods 
+	and tools. Depending on the further development of the current pandemic, the conference will be either 
+	purely virtual or in-person-only at Humboldt University, Berlin. Authors should be prepared for both 
+	types; the decision will be communicated at the end of May 2022.
 </p>
 
 <p>The topics of interest include, but are not limited to, the following aspects of
