--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <div class="wrapper">
     <div class="headerImage">
-    <img src="https://sefm-conference.github.io/2022/mainPic.JPG">
+    <img src="https://sefm-conference.github.io/2022/mainPicture.jpg">
     </div>
       <a class="site-title" rel="author" href="https://sefm-conference.github.io/2022/">SEFM 2022</a><nav class="site-nav">
           <input type="checkbox" id="nav-trigger" class="nav-trigger">
