--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
 				 <script async="" src="./widgets.js" charset="utf-8"></script> </div></li>	</ul>
 -->
    </div>
-<!--
 <h2 class="secondH">* NEWS *</h2>
+		  
 <ul>
-  <li>The SEFM main conference proceedings are published in the Formal Methods subline of Springer's Lecture Notes in Computer Science, and <a href="http://link.springer.com/openurl.asp?genre=issue&amp;issn=0302-9743&amp;volume=13085">can be accessed at this link</a>.</li>
-</ul>
--->
+  <li><strong>Special Journal Issue!</strong> The Program Committee of SEFM 2022 will invite a selection of accepted papers to submit extended versions to a special section of the Software and Systems Modeling (SoSyM).</li>
+</ul>  
+	      
 <h2 class="secondH">Welcome to SEFM 2022</h2>
 <p>The 20th edition of the International Conference on Software Engineering and
  Formal Methods will be held between 28 and 30 September 2022.</p>
