--- a/cfp.html
+++ b/cfp.html
@@ -180,7 +180,7 @@ as a volume in Springer's Lecture Notes in Computer Science series.</p>
 		  
 <h2 class="importantH">Special Journal Issue</h2>
 
-<p>The Program Committee of SEFM 2022 will invite a selection of accepted papers to submit extended versions to a special section of the Software and Systems Modeling (SoSyM).</p>
+<p>The Program Committee of SEFM 2022 will invite a selection of accepted papers to submit extended versions to a special issue of the Software and Systems Modeling (SoSyM).</p>
 
 <h2 class="importantH">Important dates</h2>
 <ul>
