--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <h2 class="secondH">* NEWS *</h2>
 		  
 <ul>
-  <li><strong>Special Journal Issue!</strong> The Program Committee of SEFM 2022 will invite a selection of accepted papers to submit extended versions to a special section of the Software and Systems Modeling (SoSyM).</li>
+  <li><strong>Special Journal Issue!</strong> The Program Committee of SEFM 2022 will invite a selection of accepted papers to submit extended versions to a special issue of the Software and Systems Modeling (SoSyM).</li>
 </ul>  
 	      
 <h2 class="secondH">Welcome to SEFM 2022</h2>
