--- a/keynotespeaker.html
+++ b/keynotespeaker.html
@@ -90,7 +90,15 @@
       <div class="page-content">
         <div id="secondary" class="widget-area sidey" role="complementary">
    </div>
-TBA
+<h2><a href="https://wwwhome.ewi.utwente.nl/~marielle/">Mariëlle Stoelinga</a>, Radboud University Nijmegen and University of Twente, NL</h2>
+
+<p><img src="https://sefm-conference.github.io/2022/ms-huco.jpg" class="imageSpeaker" align="left"/></p>
+
+<p><strong>Title:</strong> Maintenance meets model checking: predictive maintenance via fault trees and formal methods</p>
+
+<p><strong>Abstract:</strong> Proper maintenance is crucial to keep our trains, power plants and robots up and running. Since maintenance is also expensive, effective maintenance is a typical optimization problem, where one balances costs against system performance (in terms of availability, reliability, remaining useful lifetime).</p>
+<p>&nbsp;Predictive maintenance is a promising technique that aims at predicting failures more accurately, so that just-in-time maintenance can be performed, doing maintenance exactly when and where needed. Thus, predictive maintenance promises higher availability, fewer failures at lower costs. In this talk, I will advocate a combination of model-driven (esp fault trees) and data analytical techniques to get more insight in the costs versus performance of maintenance strategies. I will show the results of several case studies from railroad engineering namely rail track (with Arcadis), the HVAC (heating, ventilation, airco; with Dutch railroads).</p>
+<p><strong>Biography:</strong> Prof. Dr. Mariëlle Stoelinga is a professor of risk management, both at the Radboud University Nijmegen, and the University of Twente, in the Netherlands.Stoelinga is the project coordinator on PrimaVera, a large collaborative project on Predictive Maintenance in the Dutch National Science Agenda NWA. She also received a prestigious ERC consolidator grant Stoelinga is the scientific programme leader Risk Management Master, a part-time MSc programme for professionals. She holds an MSc and a PhD degree from Radboud University Nijmegen, and has spent several years as a post-doc at the University of California at Santa Cruz, USA.</p>
       </div>
 </div>
 
