--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
     <h2>20th International Conference on</h2>
     <h1 class="page-title">Software Engineering and Formal Methods</h1>
     <h3>28-30 September 2022</h3>
-    <h3>Jointly organised by Institute of Computer Science of Humboldt University Berlin (DE) and School of Electronic and Information Engineering of Beijing Jiaotong University (CN)
+    <h3>Jointly organised by Institute of Computer Science of Humboldt University Berlin (DE) and 
+	    School of Electronic and Information Engineering of Beijing Jiaotong University (CN)
 </h3>
       <div class="page-content">
         <div id="secondary" class="widget-area sidey" role="complementary">
@@ -103,7 +104,8 @@
 <h2 class="secondH">* NEWS *</h2>
 		  
 <ul>
-  <li><strong>Special Journal Issue!</strong> The Program Committee of SEFM 2022 will invite a selection of accepted papers to submit extended versions to a special issue of the Software and Systems Modeling (SoSyM).</li>
+  <li><strong>Special Journal Issue!</strong> The Program Committee of SEFM 2022 will invite a selection of accepted papers to submit 
+	  extended versions to a special issue of the Software and Systems Modeling (SoSyM).</li>
 </ul>  
 	      
 <h2 class="secondH">Welcome to SEFM 2022</h2>
@@ -125,9 +127,6 @@ place physically but will be replaced by a virtual event.</p>-->
 <p>As usual, the SEFM conference proceedings will be published in Springer's Lecture
 Notes in Computer Science series. All accepted papers will have to be presented
 at the conference.</p>
-<p>As usual, the SEFM conference proceedings will be published in Springer's Lecture
-  Notes in Computer Science series. All accepted papers will have to be presented
-  at the conference.</p>
 
 <h2 class="importantH">Important dates</h2>
 
