--- a/cfp.html
+++ b/cfp.html
@@ -86,9 +86,8 @@
 	The conference aims to bring together researchers and practitioners from academia, industry and 
 	government, to advance the state of the art in formal methods, to facilitate their uptake in the 
 	software industry, and to encourage their integration within practical software engineering methods 
-	and tools. Depending on the further development of the current pandemic, the conference will be either 
-	purely virtual or in-person-only at Humboldt University, Berlin. Authors should be prepared for both 
-	types; the decision will be communicated at the end of May 2022.
+	and tools. The conference and workshops will be in-person-only at Humboldt University, Berlin, Germany. 
+	At least one author of each accepted paper must attend SEFM'22 to present the paper.
 </p>
 
 <p>The topics of interest include, but are not limited to, the following aspects of
