--- a/school.html
+++ b/school.html
@@ -83,23 +83,68 @@
           </div>
         </nav></div>
 </header>
+
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home">
+        <div class="page">
 
- 
-	TBA
+    <h1 class="page-title"><a href="https://sefm-summerschool-22.github.io/">SEFM Summerschool 2022</a></h1>
+  <h2 class="page-subtitle"></h2>
 
-<!--<p><a href="https://www.york.ac.uk/assuring-autonomy/">Assuring Autonomy International Programme</a><br>
-   <a href="https://www.cmu.edu/">Carnegie Mellon University</a><br>
-   <a href="https://nu.edu.kz/">Nazarbayev University</a><br>
-   <a href="https://resilience.tas.ac.uk/home">UKRI Trustworthy Autonomous Systems Node in Resilience</a><br>
-   <a href="https://www.york.ac.uk/">University of York</a></p>
+  <div class="page-content">
+    <div id="secondary" class="widget-area sidey" role="complementary">
+<!--
+      <ul class="xoxo">
+
+          <li id="custom_html-3" class="widget_text widget-container widget_custom_html"><div class="textwidget custom-html-widget"><a class="twitter-timeline" data-width="300" data-height="600" data-theme="light" href="https://twitter.com/sefm_conf?ref_src=twsrc%5Etfw">Tweets by sefm2021</a> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> </div></li>	</ul>
 -->
-      </div>
 </div>
 
+<p>Affilitated with the <a href="https://sefm-conference.github.io/2022/">SEFM’22</a></p>
 
+<h2 id="dates-and-location">Dates and Location</h2>
+
+<p>21.9. - 24.9.2022</p>
+
+<p>Johann von Neumann-Haus, Rudower Chaussee 25, Adlershof, Berlin, Germany</p>
+
+<h2 id="courses">Courses</h2>
+
+<ul>
+  <li><a href="https://www.sosy-lab.org/people/beyer/">Dirk Beyer</a> (Ludwig-Maximilians-Universität München, Germany):</li>
+</ul>
+
+<p><strong>Software Verification</strong></p>
+
+<ul>
+  <li>
+    <p><a href="https://www.research.manchester.ac.uk/portal/michael.fisher.html">Michael Fisher</a> (University of Manchester, UK): <strong>Design and Verification of Reliable Autonomous Systems</strong></p>
+  </li>
+  <li>
+    <p><a href="http://www.es.mdh.se/staff/349-Eduard_Paul_Enoiu">Eduard Enoiu</a> (Mälardalen University, Sweden): <strong>Security Testing</strong></p>
+  </li>
+  <li>
+    <p><a href="https://people.cs.kuleuven.be/~danny.weyns/">Danny Weyns</a> (Katholieke Universiteit Leuven, Belgium; and Linnaeus University
+Sweden): <strong>Designing Self-adaptive Systems</strong></p>
+  </li>
+</ul>
+
+<h2 id="fees">Fees</h2>
+
+<p>500 Euro (including lunch and refreshments and a summer school dinner)</p>
+
+<h2 id="fees-1">Fees</h2>
+
+<p>Registration is via the [SEFM-Webpages] https://sefm-conference.github.io/2022/registration.html</p>
+
+<h2 id="director-and-contact">Director and Contact</h2>
+
+<p><a href="https://www.swansea.ac.uk/staff/m.roggenbach/">Markus Roggenbach</a> (Swansea University, UK), email: M.Roggenbach@swansea.ac.uk</p>
+  </div>
+
+</div>
+
+      </div>
     </main><footer class="site-footer h-card">
   <data class="u-url" href="/"></data>
 
