--- a/school.html
+++ b/school.html
@@ -112,9 +112,7 @@
 
 <ul>
   <li><a href="https://www.sosy-lab.org/people/beyer/">Dirk Beyer</a> (Ludwig-Maximilians-Universität München, Germany):</li>
-</ul>
-
-<p><strong>Software Verification</strong></p>
+</ul> <strong>Software Verification</strong>
 
 <ul>
   <li>
@@ -135,11 +133,11 @@ Sweden): <strong>Designing Self-adaptive Systems</strong></p>
 
 <h2 id="fees-1">Fees</h2>
 
-<p>Registration is via the [SEFM-Webpages] https://sefm-conference.github.io/2022/registration.html</p>
+<p>Registration is via the  <a href="https://sefm-conference.github.io/2022/registration.html">SEFM-Registration WebPage</a></p>
 
 <h2 id="director-and-contact">Director and Contact</h2>
 
-<p><a href="https://www.swansea.ac.uk/staff/m.roggenbach/">Markus Roggenbach</a> (Swansea University, UK), email: M.Roggenbach@swansea.ac.uk</p>
+<p><a href="https://www.swansea.ac.uk/staff/m.roggenbach/">Markus Roggenbach</a> (Swansea University, UK), email: M[dot]Roggenbach[at]swansea[dot]ac[dot]uk</p>
   </div>
 
 </div>
