--- a/school.html
+++ b/school.html
@@ -111,8 +111,8 @@
 <h2 id="courses">Courses</h2>
 
 <ul>
-  <li><a href="https://www.sosy-lab.org/people/beyer/">Dirk Beyer</a> (Ludwig-Maximilians-Universität München, Germany):</li>
-</ul> <strong>Software Verification</strong>
+  <li><a href="https://www.sosy-lab.org/people/beyer/">Dirk Beyer</a> (Ludwig-Maximilians-Universität München, Germany): <strong>Software Verification</strong></li>
+</ul>
 
 <ul>
   <li>
