--- a/school.html
+++ b/school.html
@@ -131,7 +131,7 @@ Sweden): <strong>Designing Self-adaptive Systems</strong></p>
 
 <p>500 Euro (including lunch and refreshments and a summer school dinner)</p>
 
-<h2 id="fees-1">Fees</h2>
+<h2 id="fees-1">Registration</h2>
 
 <p>Registration is via the  <a href="https://sefm-conference.github.io/2022/registration.html">SEFM-Registration WebPage</a></p>
 
