--- a/program.html
+++ b/program.html
@@ -90,7 +90,7 @@
       <div class="page-content">
         <div id="secondary" class="widget-area sidey" role="complementary">
    </div>
-TBA
+The conference will take place in-person-only at Humboldt-University in Berlin-Adlershof.
       </div>
 </div>
 
