--- a/registration.html
+++ b/registration.html
@@ -90,7 +90,8 @@
       <div class="page-content">
         <div id="secondary" class="widget-area sidey" role="complementary">
    </div>
-TBA
+Registration will open on Sunday 24 July 2022. The conference will take place in-person-only at Humboldt-University
+in Berlin-Adlershof. For each accepted paper, at least one speaker must register until Sunday 7 August 2022.
       </div>
 </div>
 
