--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <h2>20th International Conference on</h2>
     <h1 class="page-title">Software Engineering and Formal Methods</h1>
-    <h3>28-30 September 2022</h3>
+    <h3>26-30 September 2022</h3>
     <h3>Jointly organised by Institute of Computer Science of Humboldt University Berlin (DE) and 
 	    School of Electronic and Information Engineering of Beijing Jiaotong University (CN)
 </h3>
@@ -109,8 +109,8 @@
 </ul>  
 	      
 <h2 class="secondH">Welcome to SEFM 2022</h2>
-<p>The 20th edition of the International Conference on Software Engineering and
- Formal Methods will be held between 28 and 30 September 2022.</p>
+<p>The 20th edition of the International Conference on <i>Software Engineering and Formal Methods</i> (SEFM'22) 
+	will be held Sept. 28 - 30, 2022, with workshops on Sept. 26 and 27 and a SEFM school Sept. 20-24. </p>
 
 <p>The conference aims to bring together researchers and practitioners from academia,
  industry and government, to advance the state of the art in formal methods,
