--- a/keynotespeaker.html
+++ b/keynotespeaker.html
@@ -106,15 +106,22 @@
 
 <p><strong>Title:</strong>Towards verifying neural-symbolic multi-agent systems</p>
 <p><strong>Abstract:</strong>A challenge in the deployment of multi-agent systems (MAS)
-remains the inherent difficulty of predicting  with confidence their run-time behaviour. Over the past twenty years, increasingly scalable verification methods, including model checking and parameterised verification, have enabled the validation of several classes of MAS against AI-based specifications, and several MAS applications in services, robotics, security, and beyond.
+remains the inherent difficulty of predicting  with confidence their run-time behaviour. 
+Over the past twenty years, increasingly scalable verification methods, including model checking and parameterised verification, have enabled the validation of 
+several classes of MAS against AI-based specifications, and several MAS applications in services, robotics, security, and beyond.</p>
 
-Yet, a new class of agents is emerging in applications. Differently
+<p>Yet, a new class of agents is emerging in applications. Differently
 from traditional MAS, which are typically directly programmed (and
 less often purely neural), they combine both connectionist and
 symbolic aspects. We will refer to these as neural-symbolic MAS. These
-agents include a neural layer, often implementing a perception function, and symbolic or control-based layers, typically realising decision making and planning. Implementations of neural-symbolic agents permeate many present and forthcoming AI applications, including autonomous vehicles and robotics. Due to the neural layer, as well as their heterogeneity, verifying the behaviours of neural-symbolic MAS is particularly challenging. Yet, I will argue that, given the safety-critical applications they are used in, methods and tools to address their formal verification should be developed.
+agents include a neural layer, often implementing a perception function, and symbolic or 
+control-based layers, typically realising decision making and planning. Implementations of 
+neural-symbolic agents permeate many present and forthcoming AI applications, including autonomous 
+vehicles and robotics. Due to the neural layer, as well as their heterogeneity, verifying the behaviours 
+of neural-symbolic MAS is particularly challenging. Yet, I will argue that, given the safety-critical 
+applications they are used in, methods and tools to address their formal verification should be developed.</p>
 
-In this talk I will share some of the contributions on this topic
+<p>In this talk I will share some of the contributions on this topic
 developed at the Verification of Autonomous Systems Lab at Imperial
 College London. I will begin by describing traditional approaches for
 the verification of symbolic MAS, and parameterised verification to
@@ -122,14 +129,14 @@ address arbitrary collections of agents such as swarms. I will then
 summarise our present efforts on verification of neural perception
 systems, including MILP-based approaches, linear relaxations, and
 symbolic interval propagation, introduce our resulting toolkits, Venus
-and Verinet, and exemplify their use.
+and Verinet, and exemplify their use.</p>
 
-This will lead us to existing methods for closed-loop, neural-symbolic
+<p>This will lead us to existing methods for closed-loop, neural-symbolic
 MAS. In this context, I will share existing results that enable us to
 perform reachability analysis, and verify systems against bounded
-temporal specifications and ATL.
+temporal specifications and ATL.</p>
 
-I will conclude by highlighting some of the many challenges that lie ahead. </p>
+<p>I will conclude by highlighting some of the many challenges that lie ahead. </p>
 <p><strong>Biography:</strong> Alessio Lomuscio (http://www.doc.ic.ac.uk/~alessio) is Professor
 of Safe Artificial Intelligence in the Department of Computing at
 Imperial College London (UK), where he leads the Verification of
@@ -138,11 +145,15 @@ as Deputy Director for the UKRI Doctoral Training Centre in Safe and
 Trusted Artificial Intelligence.  He is a Distinguished ACM member, a
 Fellow of the European Association of Artificial Intelligence and
 currently holds a Royal Academy of Engineering Chair in Emerging
-Technologies.
+Technologies.</p>
 
-His research interests concern the development of formal verification methods for artificial intelligence.  Since 2000 he has worked on the development of formal methods for the verification of autonomous systems and multi-agent systems. To this end, he has put forward several methods based on model checking and various forms abstraction to verify AI systems, including robotic swarms, against AI-based specifications. He is presently focusing on the development of methods to ascertain the correctness of AI systems based on deep neural networks.
+<p>His research interests concern the development of formal verification methods for artificial intelligence.  
+Since 2000 he has worked on the development of formal methods for the verification of autonomous systems 
+and multi-agent systems. To this end, he has put forward several methods based on model checking and various 
+forms abstraction to verify AI systems, including robotic swarms, against AI-based specifications. He is presently 
+focusing on the development of methods to ascertain the correctness of AI systems based on deep neural networks.</p>
 
-He has published approximately 200 papers in AI conferences (including
+<p>He has published approximately 200 papers in AI conferences (including
 IJCAI, KR, AAAI, AAMAS and ECAI), verification and formal methods
 conferences (CAV, SEFM, ATVA), and international journals (AIJ, JAIR,
 ACM ToCL, JAAMAS, Information and Computation). He sits on the
