--- a/registration.html
+++ b/registration.html
@@ -90,8 +90,125 @@
       <div class="page-content">
         <div id="secondary" class="widget-area sidey" role="complementary">
    </div>
-Registration will open on Sunday 24 July 2022. The conference will take place in-person-only at Humboldt-University
-in Berlin-Adlershof. For each accepted paper, at least one speaker must register until Sunday 7 August 2022.
+ <p>The <a href="https://easychair.org/conferences/?conf=sefm22">online registration</a> page is now open.&nbsp;</p>
+          <p>In order to register for SEFM'22 or the SEFM'22 summer school or one of the SEFM'22 workshops, you need an EasyChair account. If you don't have an EasyChair account, please create one before registering.&nbsp;</p>
+<div class="page-content">
+        <div id="secondary" class="widget-area sidey" role="complementary">
+   </div>
+<style type="text/css">
+.tg  {border-collapse:collapse;border-color:#ccc;border-spacing:0;border-style:solid;border-width:1px;}
+.tg td{background-color:#fff;border-color:#ccc;border-style:solid;border-width:0px;color:#333;
+  font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 4px;word-break:normal;}
+.tg th{background-color:#f0f0f0;border-color:#ccc;border-style:solid;border-width:0px;color:#333;
+  font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 4px;word-break:normal;}
+.tg .tg-lboi{border-color:inherit;text-align:left;vertical-align:middle}
+.tg .tg-oys0{background-color:#00009b;border-color:inherit;color:#ffffff;text-align:left;vertical-align:top}
+.tg .tg-ol4y{background-color:#00009b;border-color:inherit;color:#ffffff;text-align:left;vertical-align:middle}
+.tg .tg-18bt{background-color:#dae8fc;border-color:#dae8fc;text-align:left;vertical-align:top}
+.tg .tg-w747{background-color:#dae8fc;text-align:left;vertical-align:top}
+.tg .tg-x6qq{background-color:#dae8fc;border-color:inherit;text-align:left;vertical-align:top}
+.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+.tg .tg-9c02{background-color:#FFF;color:#404040;text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+<thead>
+  <tr>
+    <th class="tg-oys0"><span style="font-weight:bold">Registration</span><br>*all Fees are in Euro</th>
+    <th class="tg-ol4y"><span style="font-weight:bold">Regular</span></th>
+    <th class="tg-ol4y"><span style="font-weight:bold">Student</span></th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-x6qq" colspan="3"><span style="font-weight:bold">SEFM conference</span></td>
+  </tr>
+  <tr>
+    <td class="tg-0pky">Early Bird</td>
+    <td class="tg-0pky">300.00 €</td>
+    <td class="tg-0pky">60.00 €</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky">Normal</td>
+    <td class="tg-0pky">350.00 €</td>
+    <td class="tg-0pky">80.00 €</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky">Banquet (Early Bird)</td>
+    <td class="tg-0pky">80.00 €</td>
+    <td class="tg-0pky">80.00 €</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky">Banquet (Normal)</td>
+    <td class="tg-0pky">100.00 €</td>
+    <td class="tg-0pky">100.00 €</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky">Printed proceedings<br>(sent after the conference)</td>
+    <td class="tg-lboi">50.00 €</td>
+    <td class="tg-lboi">50.00 €</td>
+  </tr>
+  <tr>
+    <td class="tg-18bt" colspan="3"><span style="font-weight:bold">SEFM Summer school</span></td>
+  </tr>
+  <tr>
+    <td class="tg-0pky">Early Bird</td>
+    <td class="tg-0pky">500.00 €</td>
+    <td class="tg-0pky">500.00 €</td>
+  </tr>
+  <tr>
+    <td class="tg-0pky">Normal</td>
+    <td class="tg-0pky">550.00 €</td>
+    <td class="tg-0pky">550.00 €</td>
+  </tr>
+  <tr>
+    <td class="tg-w747" colspan="3"><span style="font-weight:bold">Workshops</span></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">AI4EA</td>
+    <td class="tg-9c02"><span style="color:#404040">180.00 €</span></td>
+    <td class="tg-9c02"><span style="color:#404040">60.00 €</span></td>
+  </tr>
+  <tr>
+    <td class="tg-9c02"><span style="color:#404040">ASYDE</span></td>
+    <td class="tg-9c02"><span style="color:#404040">100.00 €</span></td>
+    <td class="tg-9c02"><span style="color:#404040">150.00 €</span></td>
+  </tr>
+  <tr>
+    <td class="tg-9c02"><span style="color:#404040">CIFMA</span></td>
+    <td class="tg-9c02"><span style="color:#404040">150.00 €</span></td>
+    <td class="tg-9c02"><span style="color:#404040">80.00 €</span></td>
+  </tr>
+  <tr>
+    <td class="tg-9c02"><span style="color:#404040">CoSim-CPS</span></td>
+    <td class="tg-9c02"><span style="color:#404040">100.00 €</span></td>
+    <td class="tg-9c02"><span style="color:#404040">60.00 €</span></td>
+  </tr>
+  <tr>
+    <td class="tg-9c02"><span style="color:#404040">F-IDE</span></td>
+    <td class="tg-9c02"><span style="color:#404040">100.00 €</span></td>
+    <td class="tg-9c02"><span style="color:#404040">60.00 €</span></td>
+  </tr>
+  <tr>
+    <td class="tg-9c02"><span style="color:#404040">FMAS</span></td>
+    <td class="tg-9c02"><span style="color:#404040">150.00 €</span></td>
+    <td class="tg-9c02"><span style="color:#404040">80.00 €</span></td>
+  </tr>
+</tbody>
+</table>
+<ul>	  
+<li> For each accepted paper, at least one person must register
+  as author with a regular or early bird (non-student) fee.</li>
+	
+  <li>Early bird discount rate ends on August 8th, 2022, 17:00 GMT. </li>
+<li>Cancellation policy:</li>
+<ul>
+  <li>For authors of accepted papers, registration fees can NOT be refunded.</li>
+  <li>Refunds will only be made after the conference.</li>
+  <li>Accepted cancellations before Sept. 1st: 50% fee.</li>
+<li>After Sept. 1st, cancellations can not be accepted. </li>
+</ul>
+</ul>
       </div>
 </div>
 
