--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
 <h2 class="secondH">* NEWS *</h2>
 		  
 <ul>
-  <li><strong>Special Journal Issue!</strong> The Program Committee of SEFM 2022 will invite a selection of accepted papers to submit 
+<li>Registration is now open. </li>
+<li>The SEFM'22 conference proceeding is accepted to be published in the Formal Methods subline of Springer's Lecture Notes in Computer Science. </li>
+<li><strong>Special Journal Issue!</strong> The Program Committee of SEFM 2022 will invite a selection of accepted papers to submit 
 	  extended versions to a special issue of the Software and Systems Modeling (SoSyM).</li>
 </ul>  
 	      
