--- a/registration.html
+++ b/registration.html
@@ -115,7 +115,7 @@
 <thead>
   <tr>
     <th class="tg-oys0"><span style="font-weight:bold">Registration</span><br>*all Fees are in Euro</th>
-    <th class="tg-ol4y"><span style="font-weight:bold">Regular</span></th>
+    <th class="tg-ol4y"><span style="font-weight:bold">Non-student</span></th>
     <th class="tg-ol4y"><span style="font-weight:bold">Student</span></th>
   </tr>
 </thead>
@@ -129,7 +129,7 @@
     <td class="tg-0pky">60.00 €</td>
   </tr>
   <tr>
-    <td class="tg-0pky">Normal</td>
+    <td class="tg-0pky">Regular</td>
     <td class="tg-0pky">350.00 €</td>
     <td class="tg-0pky">80.00 €</td>
   </tr>
@@ -139,7 +139,7 @@
     <td class="tg-0pky">80.00 €</td>
   </tr>
   <tr>
-    <td class="tg-0pky">Banquet (Normal)</td>
+    <td class="tg-0pky">Banquet (Regular)</td>
     <td class="tg-0pky">100.00 €</td>
     <td class="tg-0pky">100.00 €</td>
   </tr>
