--- a/registration.html
+++ b/registration.html
@@ -134,12 +134,12 @@
     <td class="tg-0pky">80.00 €</td>
   </tr>
   <tr>
-    <td class="tg-0pky">Banquet (Early Bird)</td>
+    <td class="tg-0pky">Additional Banquet (Early Bird)</td>
     <td class="tg-0pky">80.00 €</td>
     <td class="tg-0pky">80.00 €</td>
   </tr>
   <tr>
-    <td class="tg-0pky">Banquet (Regular)</td>
+    <td class="tg-0pky">Additional Banquet (Regular)</td>
     <td class="tg-0pky">100.00 €</td>
     <td class="tg-0pky">100.00 €</td>
   </tr>
