--- a/acceptedpapers.html
+++ b/acceptedpapers.html
@@ -90,7 +90,108 @@
       <div class="page-content">
         <div id="secondary" class="widget-area sidey" role="complementary">
    </div>
-TBA
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+<thead>
+  <tr>
+    <th class="tg-0lax">Paul Kobialka, Silvia Lizeth Tapia Tarifa, Gunnar Rye Bergersen and Einar Broch Johnsen</th>
+    <th class="tg-0lax">Weighted Games for User Journeys</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-0lax">Matteo Cimini</td>
+    <td class="tg-0lax">A Query Language for Language Analysis</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Carlos Galindo, Jens Krinke, Josep Silva and Sergio Perez Rubio</td>
+    <td class="tg-0lax">Field-Sensitive Program Slicing</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Pedro Antonino, Juliandson Ferreira, Augusto Sampaio and Bill Roscoe</td>
+    <td class="tg-0lax">Specification is Law: Safe Deployment of Ethereum Smart Contracts</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Bernhard K. Aichernig, Sandra König, Cristinel Mateis, Andrea Pferscher, Dominik Schmidt and Martin Tappler</td>
+    <td class="tg-0lax">Constrained Training of Recurrent Neural Networks for Automata Learning</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Malte Mues, Falk Howar and Simon Dierl</td>
+    <td class="tg-0lax">SPouT: Symbolic Path Recording during Testing - a Concolic Executor for the JVM</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Carlos Galindo, Sergio Perez Rubio and Josep Silva</td>
+    <td class="tg-0lax">A Java Program Slicer (System demo - Tool paper)</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Tobias Runge, Alexander Kittelmann, Marco Servetto, Alex Potanin and Ina Schaefer</td>
+    <td class="tg-0lax">Information Flow Control-by-Construction for an Object-Oriented Language</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Jan Haltermann and Heike Wehrheim</td>
+    <td class="tg-0lax">Information Exchange between Over- and Underapproximating Software Analyses</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Irman Faqrizal, Gwen Salaün and Yliès Falcone</td>
+    <td class="tg-0lax">Runtime Enforcement of IEC 61499 Applications</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Ioannis Stefanakos, Radu Calinescu, James Douthwaite, Jonathan Aitken and James Law</td>
+    <td class="tg-0lax">Safety Controller Synthesis for a Mobile Manufacturing Cobot</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Jorge Cerqueira, Alcino Cunha and Nuno Macedo</td>
+    <td class="tg-0lax">Timely specification repair for Alloy 6</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Dirk Beyer, Marian Lingsch and Martin Spiessl</td>
+    <td class="tg-0lax">A Unifying Approach for Control-Flow-Based Loop Approximation</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Junaid Rasheed and Michal Konečný</td>
+    <td class="tg-0lax">Auto-active Verification of Floating-point Programs via Nonlinear Real Provers</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Namrata Jain, Kosuke Kaneko and Subodh Sharma</td>
+    <td class="tg-0lax">SKLEE: A Dynamic Symbolic Analysis Tool for Ethereum Smart Contracts</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Lukas Miedema and Clemens Grelck</td>
+    <td class="tg-0lax">Strategy Switching: Smart Fault-tolerance for Weakly-hard Resource-constraint Real-time Applications</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Nathaniel Hamilton, Preston K Robinette and Taylor T Johnson</td>
+    <td class="tg-0lax">Training Agents to Satisfy Timed and Untimed Signal Temporal Logic Specifications with Reinforcement Learning</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Yizhak Elboher, Elazar Cohen and Guy Katz</td>
+    <td class="tg-0lax">Neural Network Verification using Residual Reasoning</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Bernard Serbinowski and Taylor T Johnson</td>
+    <td class="tg-0lax">BehaVerify: Verifying Temporal Logic Specifications for Behavior</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Angelo Ferrando and Vadim Malvone</td>
+    <td class="tg-0lax">Runtime Verification of Autonomous Systems with Imperfect Information</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Shizhen Yu, Yifan Dong, Jiuyang Liu, Yong Li, Zhilin Wu, David N. Jansen and Lijun Zhang</td>
+    <td class="tg-0lax">CHA: Supporting SVA-like Assertions in Formal Verification of Chisel Programs</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Dirk Beyer, Martin Spiessl and Sven Umbricht</td>
+    <td class="tg-0lax">Cooperation between Automatic and Interactive Software Verifiers</td>
+  </tr>
+</tbody>
+</table>
       </div>
 </div>
 
