--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 <h2 class="secondH">* NEWS *</h2>
 		  
 <ul>
+<li>The accepted papers have now been announced! </li>
 <li>Registration is now open. </li>
 <li>The SEFM'22 conference proceeding is accepted to be published in the Formal Methods subline of Springer's Lecture Notes in Computer Science. </li>
 <li><strong>Special Journal Issue!</strong> The Program Committee of SEFM 2022 will invite a selection of accepted papers to submit 
