--- a/registration.html
+++ b/registration.html
@@ -124,7 +124,7 @@
     <td class="tg-x6qq" colspan="3"><span style="font-weight:bold">SEFM conference</span></td>
   </tr>
   <tr>
-    <td class="tg-0pky">Early Bird</td>
+    <td class="tg-0pky"><del>Early Bird</del></td>
     <td class="tg-0pky">300.00 €</td>
     <td class="tg-0pky">60.00 €</td>
   </tr>
