--- a/registration.html
+++ b/registration.html
@@ -125,8 +125,8 @@
   </tr>
   <tr>
     <td class="tg-0pky"><del>Early Bird</del></td>
-    <td class="tg-0pky">300.00 €</td>
-    <td class="tg-0pky">60.00 €</td>
+    <td class="tg-0pky"><del>300.00 €</del></td>
+    <td class="tg-0pky"><del>60.00 €</del></td>
   </tr>
   <tr>
     <td class="tg-0pky">Regular</td>
@@ -134,9 +134,9 @@
     <td class="tg-0pky">80.00 €</td>
   </tr>
   <tr>
-    <td class="tg-0pky">Additional Banquet (Early Bird)</td>
-    <td class="tg-0pky">80.00 €</td>
-    <td class="tg-0pky">80.00 €</td>
+    <td class="tg-0pky"><del>Additional Banquet (Early Bird)</del></td>
+    <td class="tg-0pky"><del>80.00 €</del></td>
+    <td class="tg-0pky"><del>80.00 €</del></td>
   </tr>
   <tr>
     <td class="tg-0pky">Additional Banquet (Regular)</td>
@@ -152,9 +152,9 @@
     <td class="tg-18bt" colspan="3"><span style="font-weight:bold">SEFM Summer school</span></td>
   </tr>
   <tr>
-    <td class="tg-0pky">Early Bird</td>
-    <td class="tg-0pky">500.00 €</td>
-    <td class="tg-0pky">500.00 €</td>
+    <td class="tg-0pky"><del>Early Bird</del></td>
+    <td class="tg-0pky"><del>500.00 €</del></td>
+    <td class="tg-0pky"><del>500.00 €</del></td>
   </tr>
   <tr>
     <td class="tg-0pky">Normal</td>
