--- a/registration.html
+++ b/registration.html
@@ -143,7 +143,7 @@
   </tr>
   
   <tr>
-    <td class="tg-0pky">Additional Banquet (Regular)</td>
+    <td class="tg-0pky">Additional Banquet</td>
     <td class="tg-0pky">100.00 €</td>
     <td class="tg-0pky">100.00 €</td>
   </tr>
